# AI-FAIR_PROJECT

./: .env.example  .gitignore  COMPREHENSIVE_GAP_ANALYSIS_FIX.md  FAIR_PATH_v2.1_INTEGRATION_SUMMARY.md  GEMINI_SETUP.md  HOW_TO_RUN.md  INTEGRATION_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SKILL_GAP_ANALYSIS_README.md  STREAMLIT_INTEGRATION_GUIDE.md  STREAMLIT_UI_UPDATE_SUMMARY.md  benchmark_extraction.py  debug_learning_path.py  demo_gap_analysis.py  expand_vocabulary.py  final_verification.py  main.py  monitor.py  pyproject.toml  requirements.txt  restart_streamlit.bat  run_streamlit.py  streamlit_app.py  test_all_features.py  test_gap_analysis_output.py  verify_integration.py
data/: fairness_test_set.json  ground_truth_matches.json  ground_truth_skills.json  learning_time_database.json  salary_impact_database.json  skill_aliases.json  skill_hierarchy.json
docs/: MENTOR_IMPLEMENTATION_GUIDE.md  PHASE_3_QUICK_START.md  matching_algorithm_guide.py
logs/: error_log.csv
results/: REAL_EVALUATION_REPORT.md  data_quality_real.json  fairness_real.json  gap_analysis_ds.json  gap_analysis_multi_job.json  job_matching_real.json  performance_real.json  skill_extraction_real.json
src/: career_trajectory_simulator.py  continuous_learning_validator.py  evaluate_fairness.py  evaluate_matching.py  evaluate_priorities.py  evaluate_roberta.py  evaluate_shap.py  evaluate_system_real.py  evaluate_trends.py  fairness_evaluator.py  gap_categorizer.py  gap_identifier.py  generate_results_summary.py  interview_preparation_agent.py  job_matcher.py  (+14 more)
(+51 files in other folders)
