[project]
name = "ai-fair-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "scikit-learn>=1.8.0",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
