[project]
name = "ai-fair-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.115.0",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.9",
    "pydantic>=2.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=3.0.0",
    "shap>=0.45.0",
    "streamlit>=1.55.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "uvicorn[standard]>=0.30.0",
]
